[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
lazy_static = "1.5.0"
orderbook-proto = "0.1.2"
prometheus = "0.14.0"
serde = {version = "1.0.228", features = ["derive"]}
tokio = {version = "1.49.0", features = ["rt-multi-thread", "sync"]}
tonic = "0.14.5"
